[package]
name = "amethyst_lyon"
version = "0.1.0"
authors = ["Benedict Gaster <benedict.gaster@uwe.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { path = "./external/amethyst" }
amethyst_error = { path = "./external/amethyst/amethyst_error", version = "0.5.0" }
derivative = "1.0.3"
glsl-layout = "0.3.2"
lyon = { path = "./external/lyon" }
log = { version = "0.4.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
failure = "0.1.7"
lazy_static = "1.4.0"
nalgebra = "0.20.0"

[features]
# default = ["vulkan"] # For linux Windows
default = ["metal", "shader-compiler"] # For osx
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
shader-compiler = ["amethyst/shader-compiler"]

[build-dependencies]
glsl-to-spirv = "0.1.7"